# api/gateway/v1/gateway.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: api/universal/v1/universal.proto
+// source: api/gateway/v1/gateway.proto
 
 package v1
 
