# app/gateway/internal/server/grpc.go
@@ -1,10 +1,10 @@
 package server
 
 import (
+	gatewayv1 "universal/api/gateway/v1"
 	v1 "universal/api/helloworld/v1"
-	universalv1 "universal/api/universal/v1"
-	"universal/internal/conf"
-	"universal/internal/service"
+	"universal/app/gateway/internal/conf"
+	"universal/app/gateway/internal/service"
 
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
@@ -12,7 +12,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, universalService *service.UniversalService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, gatewayService *service.GatewayService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -29,6 +29,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, universalSer
 	}
 	srv := grpc.NewServer(opts...)
 	v1.RegisterGreeterServer(srv, greeter)
-	universalv1.RegisterUniversalServer(srv, universalService)
+	gatewayv1.RegisterGatewayServer(srv, gatewayService)
 	return srv
 }
